# deployee

./: .travis.yml  CHANGELOG.md  MANIFEST.in  Pipfile  README.md  deploy.sh  format.py  pydeploy.py  run.py  setup.cfg  setup.py  test.py
ansible/: ansible.cfg  inventory  playbook.yml  secrets.yml  vars.yml
ansible/tasks/: deploy.yml  install.yml  test.yml
ansible/template/: supervisor.conf.j2
deployee/: deployee.py  main.py
deployee/ansible/: ansible.cfg  inventory  playbook.yml
deployee/ansible/tasks/: cleanup.yml  deploy.yml  django.yml  install.yml  test.yml
