[metadata]
name = deployee
author = wqy
author_email = qiyingwangwqy@gmail.com
description = Python tool to deploy python web application automatically
long_description = file: README.md, CHANGELOG.md
long_description_content_type = text/markdown
url = https://github.com/WqyJh/deployee
keywords = django,automation,deploy
license_files = LICENSE
classifiers =
    Programming Language :: Python :: 3 :: Only


[options]
include_package_data = True
packages = find:


[options.package_data]
* = *.txt, *.rst, *.md
